bug of both spacing

--- a/builder/css/builder-assets/_gizmo.scss
+++ b/builder/css/builder-assets/_gizmo.scss
@@ -3,6 +3,10 @@
 	position: relative;
 	height: 5px;
 
+  	&.karma-top-spacing-height{
+	  height:0;
+	}
+
 	&.karma-top-spacing {
 		width: 100%;
 		cursor: n-resize;
